--- a/about.asp.html
+++ b/about.asp.html
@@ -1,7 +1,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>关于我们-分布式光伏电站,分布式光伏发电,屋顶分布式并网电站 - 浙江仁智能源科技有限公司</title>
 <meta name="keywords" content="分布式光伏电站,分布式光伏发电,屋顶分布式并网电站,仁智能源" />
 <meta name="description" content="仁智能源是苏州科之佳电力有限公司下属子公司，集团公司成立于2008年，总部位于无锡市，业务涉及海内外，包括：太阳能、风能、国际贸易、金融投资、建筑设计与施工、绿色新能源开发等业务，并且是中国著名的光伏制造企业之一" />
