--- a/about-e.html
+++ b/about-e.html
@@ -2,7 +2,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Zhejiang Renzhi Energy Technology Co Ltd</title>
     <meta name="keywords" content="Distributed photovoltaic power plant" />
     <meta name="description" content=" " />
@@ -20,7 +20,7 @@
             <tr>
                 <td width="995" align="left">Welcome to Zhejiang Renzhi Energy Technology Co Ltd</td>
                 <td width="137" align="right"><a href="about.html"><img src="images/ver_cn.jpg" width="30" height="22" border="0"></a></td>
-                <td width="68" align="right"><a href="about.html">¼òÌåÖÐÎÄ</a></td>
+                <td width="68" align="right"><a href="about.html">ç®€ä½“ä¸­æ–‡</a></td>
             </tr>
         </table></td>
     </tr>
@@ -40,14 +40,14 @@
         </table></td>
     </tr>
     <tr>
-        <td align="center"><!-- ´úÂë ¿ªÊ¼ -->
+        <td align="center"><!-- ä»£ç  å¼€å§‹ -->
             <div class="slide_container">
                 <ul class="rslides" id="slider">
                     <li> <img src="images/pice01.jpg" alt="" /> </li>
                     <li> <img src="images/pice02.jpg" alt="" /> </li>
                 </ul>
             </div>
-            <!-- ´úÂë ½áÊø -->
+            <!-- ä»£ç  ç»“æŸ -->
             <script src="js/responsiveslides.min.js"></script>
             <script src="js/slide.js"></script>    </td>
     </tr>
