--- a/about.html
+++ b/about.html
@@ -3,10 +3,10 @@
 
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
-    <title>¹ØÓÚÎÒÃÇ-·Ö²¼Ê½¹â·üµçÕ¾,·Ö²¼Ê½¹â·ü·¢µç,ÎÝ¶¥·Ö²¼Ê½²¢ÍøµçÕ¾ - Õã½­ÈÊÖÇÄÜÔ´¿Æ¼¼ÓÐÏÞ¹«Ë¾</title>
-    <meta name="keywords" content="·Ö²¼Ê½¹â·üµçÕ¾,·Ö²¼Ê½¹â·ü·¢µç,ÎÝ¶¥·Ö²¼Ê½²¢ÍøµçÕ¾,ÈÊÖÇÄÜÔ´" />
-    <meta name="description" content="ÈÊÖÇÄÜÔ´ÊÇËÕÖÝ¿ÆÖ®¼ÑµçÁ¦ÓÐÏÞ¹«Ë¾ÏÂÊô×Ó¹«Ë¾£¬¼¯ÍÅ¹«Ë¾³ÉÁ¢ÓÚ2008Äê£¬×Ü²¿Î»ÓÚÎÞÎýÊÐ£¬ÒµÎñÉæ¼°º£ÄÚÍâ£¬°üÀ¨£ºÌ«ÑôÄÜ¡¢·çÄÜ¡¢¹ú¼ÊÃ³Ò×¡¢½ðÈÚÍ¶×Ê¡¢½¨ÖþÉè¼ÆÓëÊ©¹¤¡¢ÂÌÉ«ÐÂÄÜÔ´¿ª·¢µÈÒµÎñ£¬²¢ÇÒÊÇÖÐ¹úÖøÃûµÄ¹â·üÖÆÔìÆóÒµÖ®Ò»" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>å…³äºŽæˆ‘ä»¬-åˆ†å¸ƒå¼å…‰ä¼ç”µç«™,åˆ†å¸ƒå¼å…‰ä¼å‘ç”µ,å±‹é¡¶åˆ†å¸ƒå¼å¹¶ç½‘ç”µç«™ - æµ™æ±Ÿä»æ™ºèƒ½æºç§‘æŠ€æœ‰é™å…¬å¸</title>
+    <meta name="keywords" content="åˆ†å¸ƒå¼å…‰ä¼ç”µç«™,åˆ†å¸ƒå¼å…‰ä¼å‘ç”µ,å±‹é¡¶åˆ†å¸ƒå¼å¹¶ç½‘ç”µç«™,ä»æ™ºèƒ½æº" />
+    <meta name="description" content="ä»æ™ºèƒ½æºæ˜¯è‹å·žç§‘ä¹‹ä½³ç”µåŠ›æœ‰é™å…¬å¸ä¸‹å±žå­å…¬å¸ï¼Œé›†å›¢å…¬å¸æˆç«‹äºŽ2008å¹´ï¼Œæ€»éƒ¨ä½äºŽæ— é”¡å¸‚ï¼Œä¸šåŠ¡æ¶‰åŠæµ·å†…å¤–ï¼ŒåŒ…æ‹¬ï¼šå¤ªé˜³èƒ½ã€é£Žèƒ½ã€å›½é™…è´¸æ˜“ã€é‡‘èžæŠ•èµ„ã€å»ºç­‘è®¾è®¡ä¸Žæ–½å·¥ã€ç»¿è‰²æ–°èƒ½æºå¼€å‘ç­‰ä¸šåŠ¡ï¼Œå¹¶ä¸”æ˜¯ä¸­å›½è‘—åçš„å…‰ä¼åˆ¶é€ ä¼ä¸šä¹‹ä¸€" />
     <link rel="stylesheet" href="js/lrtk.css">
     <script src="js/jquery.min.js"></script>
 
@@ -19,8 +19,8 @@
     <tr>
         <td height="32" align="center" bgcolor="#E8E8E8"><table width="1200" border="0" cellspacing="0" cellpadding="0">
             <tr>
-                <td align="left">»¶Ó­½øÈëÕã½­ÈÊÖÇÄÜÔ´¿Æ¼¼ÓÐÏÞ¹«Ë¾¡¾¹ÙÍø¡¿</td>
-                <td align="right"><a href="sitemap.xml" target="_blank">ÍøÕ¾µØÍ¼</a> | <a href="javascript:void(0)" onClick="shoucang(document.title,window.location)">ÊÕ²Ø±¾Õ¾</a></td>
+                <td align="left">æ¬¢è¿Žè¿›å…¥æµ™æ±Ÿä»æ™ºèƒ½æºç§‘æŠ€æœ‰é™å…¬å¸ã€å®˜ç½‘ã€‘</td>
+                <td align="right"><a href="sitemap.xml" target="_blank">ç½‘ç«™åœ°å›¾</a> | <a href="javascript:void(0)" onClick="shoucang(document.title,window.location)">æ”¶è—æœ¬ç«™</a></td>
             </tr>
         </table></td>
     </tr>
@@ -31,22 +31,22 @@
                 <td width="1061" align="right"><table width="760" border="0" cellspacing="0" cellpadding="0">
                     <tr>
                         <td height="98" align="center"><a href="index.html"><font style="font-size:6px; font-family:Constantia; color:#A7A7A7;">Home</font><br />
-                            ÍøÕ¾Ê×Ò³</a></td>
+                            ç½‘ç«™é¦–é¡µ</a></td>
                         <td style="text-align:center;">/</td>
                         <td align="center"><a href="about.html" class="dh"><font style="font-size:6px; font-family:Constantia; color:#A7A7A7;">About</font><br />
-                            ¹ØÓÚÎÒÃÇ</a></td>
+                            å…³äºŽæˆ‘ä»¬</a></td>
                         <td style="text-align:center;">/</td>
                         <td width="150" align="center"><a href="fd.html"><font style="font-size:6px; font-family:Constantia; color:#A7A7A7;">Photovoltaic</font><br />
-                            ·Ö²¼Ê½¹â·ü·¢µç</a></td>
+                            åˆ†å¸ƒå¼å…‰ä¼å‘ç”µ</a></td>
                         <td style="text-align:center;">/</td>
                         <td align="center"><a href="news.html"><font style="font-size:6px; font-family:Constantia; color:#A7A7A7;">News</font><br />
-                            ÐÂÎÅÖÐÐÄ</a></td>
+                            æ–°é—»ä¸­å¿ƒ</a></td>
                         <td style="text-align:center;">/</td>
                         <td align="center"><a href="cp.html"><font style="font-size:6px; font-family:Constantia; color:#A7A7A7;">Case</font><br />
-                            °¸ÀýÕ¹Ê¾</a></td>
+                            æ¡ˆä¾‹å±•ç¤º</a></td>
                         <td style="text-align:center;">/</td>
                         <td align="center"><a href="cs.html"><font style="font-size:6px; font-family:Constantia; color:#A7A7A7;">Contacts</font><br />
-                            ÁªÏµÎÒÃÇ</a></td>
+                            è”ç³»æˆ‘ä»¬</a></td>
                         <td style="text-align:center;">/</td>
                         <td align="center"><a href="about-e.html"><font style="font-size:6px; font-family:Constantia; color:#A7A7A7;">language</font><br />
                             ENGLISH</a></td>
@@ -56,14 +56,14 @@
         </table>      </td>
     </tr>
     <tr>
-        <td align="center"><!-- ´úÂë ¿ªÊ¼ -->
+        <td align="center"><!-- ä»£ç  å¼€å§‹ -->
             <div class="slide_container">
                 <ul class="rslides" id="slider">
                     <li> <img src="images/pic01.jpg" alt="" /> </li>
                     <li> <img src="images/pic02.jpg" alt="" /> </li>
                 </ul>
             </div>
-            <!-- ´úÂë ½áÊø -->
+            <!-- ä»£ç  ç»“æŸ -->
             <script src="js/responsiveslides.min.js"></script>
             <script src="js/slide.js"></script>    </td>
     </tr>
@@ -76,18 +76,18 @@
         <td height="100" align="center" class="line_news"><font style="font-size:42px; color:#a8a8a8; text-transform:uppercase;">company profile</font></td>
     </tr>
     <tr>
-        <td height="56" align="center" class="line_news" style="font-size:18px; color:#37394A; line-height:30px;">¹ØÓÚÎÒÃÇ<br />
+        <td height="56" align="center" class="line_news" style="font-size:18px; color:#37394A; line-height:30px;">å…³äºŽæˆ‘ä»¬<br />
             <img src="images/a_about_line.png" width="55" height="13" /></td>
     </tr>
     <tr>
-        <td height="80" align="center"><font style="font-size:28px; color:#ef8305;">»¥»Ý»¥Àû&nbsp;&nbsp;&nbsp;&nbsp;ºÏ×÷¹²Ó®</font></td>
+        <td height="80" align="center"><font style="font-size:28px; color:#ef8305;">äº’æƒ äº’åˆ©&nbsp;&nbsp;&nbsp;&nbsp;åˆä½œå…±èµ¢</font></td>
     </tr>
 </table>
 <table width="1200" border="0" align="center" cellpadding="0" cellspacing="0">
     <tr>
-        <td style="line-height:32px;"><div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Õã½­ÈÊÖÇÄÜÔ´¿Æ¼¼ÓÐÏÞ¹«Ë¾£¬×¢²á³ÉÁ¢ÓÚ2011Äê£¬µØ´¦½ð»ª½ðÎ÷¹ú¼Ò¿ª·¢Ô°ÇøÜ½ÈØÂ·39ºÅ£¬¹«Ë¾Í¶Èë×Ê½ð6000ÍòÔª£¬½¨ÉèÏÖ´ú»¯µÄÉú²ú³µ¼ä15800Æ½·½ºÍ²É¹ºÁË×îÐÂÉú²úÉè±¸£¬×é¼þÉú²ú´ï460Õ×ÍßµÄÉú²úÄÜÁ¦£¬Éú²ú×ÜÖµ´ï6ÒÚÔªÈËÃñ±Ò¡£ÈÊÖÇÄÜÔ´ÊÇËÕÖÝ¿ÆÖ®¼ÑµçÁ¦ÓÐÏÞ¹«Ë¾ÏÂÊô×Ó¹«Ë¾£¬¼¯ÍÅ¹«Ë¾³ÉÁ¢ÓÚ2008Äê£¬×Ü²¿Î»ÓÚÎÞÎýÊÐ£¬ÒµÎñÉæ¼°º£ÄÚÍâ£¬°üÀ¨£ºÌ«ÑôÄÜ¡¢·çÄÜ¡¢¹ú¼ÊÃ³Ò×¡¢½ðÈÚÍ¶×Ê¡¢½¨ÖþÉè¼ÆÓëÊ©¹¤¡¢ÂÌÉ«ÐÂÄÜÔ´¿ª·¢µÈÒµÎñ£¬²¢ÇÒÊÇÖÐ¹úÖøÃûµÄ¹â·üÖÆÔìÆóÒµÖ®Ò»¡£</div>
-            <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;¹«Ë¾»ú¹¹ÉèÊ©ÍêÉÆ£¬Éú²ú¡¢°²×°¡¢·þÎñ¼¼ÊõÁ¦Á¿ÐÛºñ£¬Æ¾½èÈ«ÇòÏÈ½øµÄÑÐ·¢ÄÜÁ¦ÎªÆóÒµ¼¼Êõ½ø²½¡¢¼¼ÊõÑÓÉìºÍ¿É³ÖÐø·¢Õ¹Ìá¹©ÁËÓÐÁ¦±£ÕÏ¡£ÏÖÒÑÍ¨¹ýISO9001:2000ÖÊÁ¿¹ÜÀíÌåÏµÈÏÖ¤¼°¹ú¼ÊCE¡¢IEC61215¡¢TUV¼°ULÖ¤Êé¡£</div>
-            <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Èç½ñ£¬Õã½­ÈÊÖÇÄÜÔ´¿Æ¼¼ÓÐÏÞ¹«Ë¾ÔÚ¼¯ÍÅÏÂÊô¹«Ë¾°²»ÕÈýÈýµçÁ¦½¨Öþ°²×°¹«Ë¾¡¢°²»ÕÊ¡¼ÎÄÀÌ«ÑôÄÜ¿Æ¼¼ÓÐÏÞ¹«Ë¾¡¢ËÕÖÝ¼ÎÐÀÐÂÄÜÔ´¿Æ¼¼ÓÐÏÞ¹«Ë¾¡¢ÎÞÎý½àÑô¹âµçÓÐÏÞ¹«Ë¾»ý¼«ÅäºÏÏÂ£¬ÏÖÒÑÔÚÈ«¹ú¸÷µØ¿ªÕ¹¹â·üµçÕ¾½¨Éè£¬ÎªÄúÌá¹©×îÓÅÖÊµÄ²úÆ·£¬×îºÃµÄ·þÎñ£¬×îÖµµÃÐÅÀµµÄ¹â·üÊÂÒµ»ï°é¡£</div></td>
+        <td style="line-height:32px;"><div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;æµ™æ±Ÿä»æ™ºèƒ½æºç§‘æŠ€æœ‰é™å…¬å¸ï¼Œæ³¨å†Œæˆç«‹äºŽ2011å¹´ï¼Œåœ°å¤„é‡‘åŽé‡‘è¥¿å›½å®¶å¼€å‘å›­åŒºèŠ™è“‰è·¯39å·ï¼Œå…¬å¸æŠ•å…¥èµ„é‡‘6000ä¸‡å…ƒï¼Œå»ºè®¾çŽ°ä»£åŒ–çš„ç”Ÿäº§è½¦é—´15800å¹³æ–¹å’Œé‡‡è´­äº†æœ€æ–°ç”Ÿäº§è®¾å¤‡ï¼Œç»„ä»¶ç”Ÿäº§è¾¾460å…†ç“¦çš„ç”Ÿäº§èƒ½åŠ›ï¼Œç”Ÿäº§æ€»å€¼è¾¾6äº¿å…ƒäººæ°‘å¸ã€‚ä»æ™ºèƒ½æºæ˜¯è‹å·žç§‘ä¹‹ä½³ç”µåŠ›æœ‰é™å…¬å¸ä¸‹å±žå­å…¬å¸ï¼Œé›†å›¢å…¬å¸æˆç«‹äºŽ2008å¹´ï¼Œæ€»éƒ¨ä½äºŽæ— é”¡å¸‚ï¼Œä¸šåŠ¡æ¶‰åŠæµ·å†…å¤–ï¼ŒåŒ…æ‹¬ï¼šå¤ªé˜³èƒ½ã€é£Žèƒ½ã€å›½é™…è´¸æ˜“ã€é‡‘èžæŠ•èµ„ã€å»ºç­‘è®¾è®¡ä¸Žæ–½å·¥ã€ç»¿è‰²æ–°èƒ½æºå¼€å‘ç­‰ä¸šåŠ¡ï¼Œå¹¶ä¸”æ˜¯ä¸­å›½è‘—åçš„å…‰ä¼åˆ¶é€ ä¼ä¸šä¹‹ä¸€ã€‚</div>
+            <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;å…¬å¸æœºæž„è®¾æ–½å®Œå–„ï¼Œç”Ÿäº§ã€å®‰è£…ã€æœåŠ¡æŠ€æœ¯åŠ›é‡é›„åŽšï¼Œå‡­å€Ÿå…¨çƒå…ˆè¿›çš„ç ”å‘èƒ½åŠ›ä¸ºä¼ä¸šæŠ€æœ¯è¿›æ­¥ã€æŠ€æœ¯å»¶ä¼¸å’Œå¯æŒç»­å‘å±•æä¾›äº†æœ‰åŠ›ä¿éšœã€‚çŽ°å·²é€šè¿‡ISO9001:2000è´¨é‡ç®¡ç†ä½“ç³»è®¤è¯åŠå›½é™…CEã€IEC61215ã€TUVåŠULè¯ä¹¦ã€‚</div>
+            <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;å¦‚ä»Šï¼Œæµ™æ±Ÿä»æ™ºèƒ½æºç§‘æŠ€æœ‰é™å…¬å¸åœ¨é›†å›¢ä¸‹å±žå…¬å¸å®‰å¾½ä¸‰ä¸‰ç”µåŠ›å»ºç­‘å®‰è£…å…¬å¸ã€å®‰å¾½çœå˜‰ç¦å¤ªé˜³èƒ½ç§‘æŠ€æœ‰é™å…¬å¸ã€è‹å·žå˜‰æ¬£æ–°èƒ½æºç§‘æŠ€æœ‰é™å…¬å¸ã€æ— é”¡æ´é˜³å…‰ç”µæœ‰é™å…¬å¸ç§¯æžé…åˆä¸‹ï¼ŒçŽ°å·²åœ¨å…¨å›½å„åœ°å¼€å±•å…‰ä¼ç”µç«™å»ºè®¾ï¼Œä¸ºæ‚¨æä¾›æœ€ä¼˜è´¨çš„äº§å“ï¼Œæœ€å¥½çš„æœåŠ¡ï¼Œæœ€å€¼å¾—ä¿¡èµ–çš„å…‰ä¼äº‹ä¸šä¼™ä¼´ã€‚</div></td>
     </tr>
     <tr>
         <td>&nbsp;</td>
@@ -102,19 +102,19 @@
     <tr bgcolor="#FFFFFF">
         <td align="center" bgcolor="#37394A"><table width="1200" border="0" cellspacing="0" cellpadding="0">
             <tr>
-                <td height="50" align="center"><a href="index.html" class="end">ÍøÕ¾Ê×Ò³</a></td>
+                <td height="50" align="center"><a href="index.html" class="end">ç½‘ç«™é¦–é¡µ</a></td>
                 <td align="center" style="color:#FFFFFF;">|</td>
-                <td align="center"><a href="about.html" class="end">¹ØÓÚÎÒÃÇ</a></td>
+                <td align="center"><a href="about.html" class="end">å…³äºŽæˆ‘ä»¬</a></td>
                 <td align="center" style="color:#FFFFFF;">|</td>
-                <td width="180" align="center"><a href="fd.html" class="end">·Ö²¼Ê½¹â·ü·¢µç</a></td>
+                <td width="180" align="center"><a href="fd.html" class="end">åˆ†å¸ƒå¼å…‰ä¼å‘ç”µ</a></td>
                 <td align="center" style="color:#FFFFFF;">|</td>
-                <td align="center"><a href="cp.html" class="end">°¸ÀýÕ¹Ê¾</a></td>
+                <td align="center"><a href="cp.html" class="end">æ¡ˆä¾‹å±•ç¤º</a></td>
                 <td align="center" style="color:#FFFFFF;">|</td>
-                <td align="center"><a href="news.html?cid=1" class="end">ÐÂÎÅÖÐÐÄ</a></td>
+                <td align="center"><a href="news.html?cid=1" class="end">æ–°é—»ä¸­å¿ƒ</a></td>
                 <td align="center" style="color:#FFFFFF;">|</td>
-                <td align="center"><a href="news.html?cid=2" class="end">¿Í»§ÎÊ´ð</a></td>
+                <td align="center"><a href="news.html?cid=2" class="end">å®¢æˆ·é—®ç­”</a></td>
                 <td align="center" style="color:#FFFFFF;">|</td>
-                <td align="center"><a href="cs.html" class="end">ÁªÏµÎÒÃÇ</a></td>
+                <td align="center"><a href="cs.html" class="end">è”ç³»æˆ‘ä»¬</a></td>
             </tr>
         </table></td>
     </tr>
@@ -124,9 +124,9 @@
     <tr>
         <td height="160" align="center" bgcolor="#37394A"><table width="1200" border="0" cellspacing="0" cellpadding="0">
             <tr>
-                <td align="center"><font style="font-size:14px; color:#fff; line-height:32px;">×ÉÑ¯ÈÈÏß£º15088204168£¨³ÂÏÈÉú£©&nbsp;&nbsp;£¬&nbsp;&nbsp;13385894163£¨ºúÏÈÉú£©<br />
-                    µØ Ö·£ºÕã½­Ê¡½ð»ªÊÐ½ðÎ÷¿ª·¢ÇøÜ½ÈØÂ·39ºÅ&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ÓÊ Ïä£ºadmin@zjrenzhi.com<br />
-                    Copyright &#169;  Õã½­ÈÊÖÇÄÜÔ´¿Æ¼¼ÓÐÏÞ¹«Ë¾&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;¼¼ÊõÖ§³Ö£º<a href="http://www.0579yk.com/" target="_blank" class="end">¿çº£ÍøÂç</a></font></td>
+                <td align="center"><font style="font-size:14px; color:#fff; line-height:32px;">å’¨è¯¢çƒ­çº¿ï¼š15088204168ï¼ˆé™ˆå…ˆç”Ÿï¼‰&nbsp;&nbsp;ï¼Œ&nbsp;&nbsp;13385894163ï¼ˆèƒ¡å…ˆç”Ÿï¼‰<br />
+                    åœ° å€ï¼šæµ™æ±Ÿçœé‡‘åŽå¸‚é‡‘è¥¿å¼€å‘åŒºèŠ™è“‰è·¯39å·&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;é‚® ç®±ï¼šadmin@zjrenzhi.com<br />
+                    Copyright &#169;  æµ™æ±Ÿä»æ™ºèƒ½æºç§‘æŠ€æœ‰é™å…¬å¸&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;æŠ€æœ¯æ”¯æŒï¼š<a href="http://www.0579yk.com/" target="_blank" class="end">è·¨æµ·ç½‘ç»œ</a></font></td>
             </tr>
         </table></td>
     </tr>
