--- a/cp-e.html
+++ b/cp-e.html
@@ -2,7 +2,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Zhejiang Renzhi Energy Technology Co Ltd</title>
     <meta name="keywords" content="Distributed photovoltaic power plant" />
     <meta name="description" content=" " />
@@ -20,7 +20,7 @@
             <tr>
                 <td width="995" align="left">Welcome to Zhejiang Renzhi Energy Technology Co Ltd</td>
                 <td width="137" align="right"><a href="about.html"><img src="images/ver_cn.jpg" width="30" height="22" border="0"></a></td>
-                <td width="68" align="right"><a href="about.html">╪РлЕжпнд</a></td>
+                <td width="68" align="right"><a href="about.html">Г╝─Д╫⌠Д╦╜Ф√┤</a></td>
             </tr>
         </table></td>
     </tr>
@@ -39,14 +39,14 @@
         </table></td>
     </tr>
     <tr>
-        <td align="center"><!-- ╢ЗбК ©╙й╪ -->
+        <td align="center"><!-- Д╩ёГ═│ Е╪─Е╖▀ -->
             <div class="slide_container">
                 <ul class="rslides" id="slider">
                     <li> <img src="images/pice01.jpg" alt="" /> </li>
                     <li> <img src="images/pice02.jpg" alt="" /> </li>
                 </ul>
             </div>
-            <!-- ╢ЗбК ╫АйЬ -->
+            <!-- Д╩ёГ═│ Г╩⌠Ф²÷ -->
             <script src="js/responsiveslides.min.js"></script>
             <script src="js/slide.js"></script>    </td>
     </tr>
@@ -93,12 +93,12 @@
             <tr>
                 <td height="156" align="center" bgcolor="#FFFFFF" class="img"><a href="big-e.html?pid=1">
 
-                    <img src="/upload/pro/1201791811361.png" alt="╪рм╔╩╖сцо╣мЁ" width="260" height="136" border="0"/>
+                    <img src="/upload/pro/1201791811361.png" alt="Е╝╤Е╨╜Ф┬╥Г■╗ГЁ╩Г╩÷" width="260" height="136" border="0"/>
 
                 </a></td>
             </tr>
             <tr>
-                <td height="50" align="center"><a href="big-e.html?pid=1">╫╜куянЁг6KWp╪рм╔╩╖сцо╣мЁ</a></td>
+                <td height="50" align="center"><a href="big-e.html?pid=1">Ф╠÷Х▀▐Г⌡░Е÷▌6KWpЕ╝╤Е╨╜Ф┬╥Г■╗ГЁ╩Г╩÷</a></td>
             </tr>
         </table></td>
 
@@ -106,12 +106,12 @@
             <tr>
                 <td height="156" align="center" bgcolor="#FFFFFF" class="img"><a href="big-e.html?pid=2">
 
-                    <img src="/upload/pro/12017918113752.png" alt="╪рм╔╩╖сцо╣мЁ" width="260" height="136" border="0"/>
+                    <img src="/upload/pro/12017918113752.png" alt="Е╝╤Е╨╜Ф┬╥Г■╗ГЁ╩Г╩÷" width="260" height="136" border="0"/>
 
                 </a></td>
             </tr>
             <tr>
-                <td height="50" align="center"><a href="big-e.html?pid=2">╟╡╩у╩╢до5.4KWp╪рм╔╩╖сцо╣мЁ</a></td>
+                <td height="50" align="center"><a href="big-e.html?pid=2">Е╝┴Е╬╫Ф╥╝Е█≈5.4KWpЕ╝╤Е╨╜Ф┬╥Г■╗ГЁ╩Г╩÷</a></td>
             </tr>
         </table></td>
 
@@ -119,12 +119,12 @@
             <tr>
                 <td height="156" align="center" bgcolor="#FFFFFF" class="img"><a href="big-e.html?pid=3">
 
-                    <img src="/upload/pro/1201791811389.png" alt="╪рм╔╩╖сцо╣мЁ" width="260" height="136" border="0"/>
+                    <img src="/upload/pro/1201791811389.png" alt="Е╝╤Е╨╜Ф┬╥Г■╗ГЁ╩Г╩÷" width="260" height="136" border="0"/>
 
                 </a></td>
             </tr>
             <tr>
-                <td height="50" align="center"><a href="big-e.html?pid=3">╩╢╟╡а╟к╝3.24KWp╪рм╔╩╖сцо╣мЁ</a></td>
+                <td height="50" align="center"><a href="big-e.html?pid=3">Ф╥╝Е╝┴Ф╤÷Ф╟╢3.24KWpЕ╝╤Е╨╜Ф┬╥Г■╗ГЁ╩Г╩÷</a></td>
             </tr>
         </table></td>
 
@@ -132,12 +132,12 @@
             <tr>
                 <td height="156" align="center" bgcolor="#FFFFFF" class="img"><a href="big-e.html?pid=4">
 
-                    <img src="/upload/pro/12017918113824.png" alt="╪рм╔╩╖сцо╣мЁ" width="260" height="136" border="0"/>
+                    <img src="/upload/pro/12017918113824.png" alt="Е╝╤Е╨╜Ф┬╥Г■╗ГЁ╩Г╩÷" width="260" height="136" border="0"/>
 
                 </a></td>
             </tr>
             <tr>
-                <td height="50" align="center"><a href="big-e.html?pid=4">ркпк╡ХжЯ╤х╪ы╢Е15.12KWp╪рм╔╩╖сцо╣мЁ</a></td>
+                <td height="50" align="center"><a href="big-e.html?pid=4">Е╝°Е┘╢Х▄╤Г╚╧Е╨╕Е│┤Ф²▒15.12KWpЕ╝╤Е╨╜Ф┬╥Г■╗ГЁ╩Г╩÷</a></td>
             </tr>
         </table></td>
     </tr><tr>
@@ -145,12 +145,12 @@
         <tr>
             <td height="156" align="center" bgcolor="#FFFFFF" class="img"><a href="big-e.html?pid=5">
 
-                <img src="/upload/pro/12017918113910.png" alt="╪рм╔╩╖сцо╣мЁ" width="260" height="136" border="0"/>
+                <img src="/upload/pro/12017918113910.png" alt="Е╝╤Е╨╜Ф┬╥Г■╗ГЁ╩Г╩÷" width="260" height="136" border="0"/>
 
             </a></td>
         </tr>
         <tr>
-            <td height="50" align="center"><a href="big-e.html?pid=5">ркпкуеД╬уРжЯт╟╢Е5.6KWp╪рм╔╩╖сцо╣мЁ</a></td>
+            <td height="50" align="center"><a href="big-e.html?pid=5">Е╝°Е┘╢Е╪═Ф╦ И∙┤Г╚╧Е⌡╜Ф²▒5.6KWpЕ╝╤Е╨╜Ф┬╥Г■╗ГЁ╩Г╩÷</a></td>
         </tr>
     </table></td>
 
@@ -158,12 +158,12 @@
         <tr>
             <td height="156" align="center" bgcolor="#FFFFFF" class="img"><a href="big-e.html?pid=6">
 
-                <img src="/upload/pro/12017918113927.png" alt="╪рм╔╩╖сцо╣мЁ" width="260" height="136" border="0"/>
+                <img src="/upload/pro/12017918113927.png" alt="Е╝╤Е╨╜Ф┬╥Г■╗ГЁ╩Г╩÷" width="260" height="136" border="0"/>
 
             </a></td>
         </tr>
         <tr>
-            <td height="50" align="center"><a href="big-e.html?pid=6">ркпкйпиф╬МсЯи╫5.3KWp╧Б╥Э╣Гу╬</a></td>
+            <td height="50" align="center"><a href="big-e.html?pid=6">Е╝°Е┘╢Е╦┌Е√└Е█╥Г▌┴Е╠╠5.3KWpЕ┘┴Д╪▐Г■╣Г╚≥</a></td>
         </tr>
     </table></td>
 
@@ -171,12 +171,12 @@
         <tr>
             <td height="156" align="center" bgcolor="#FFFFFF" class="img"><a href="big-e.html?pid=7">
 
-                <img src="/upload/pro/12017918115022.png" alt="╪рм╔╩╖сцо╣мЁ" width="260" height="136" border="0"/>
+                <img src="/upload/pro/12017918115022.png" alt="Е╝╤Е╨╜Ф┬╥Г■╗ГЁ╩Г╩÷" width="260" height="136" border="0"/>
 
             </a></td>
         </tr>
         <tr>
-            <td height="50" align="center"><a href="big-e.html?pid=7">╫╜кууР╫╜25KWp╪рм╔╩╖сцо╣мЁ</a></td>
+            <td height="50" align="center"><a href="big-e.html?pid=7">Ф╠÷Х▀▐И∙┤Ф╠÷25KWpЕ╝╤Е╨╜Ф┬╥Г■╗ГЁ╩Г╩÷</a></td>
         </tr>
     </table></td>
 
@@ -184,12 +184,12 @@
         <tr>
             <td height="156" align="center" bgcolor="#FFFFFF" class="img"><a href="big-e.html?pid=8">
 
-                <img src="/upload/pro/12017918115035.png" alt="╪рм╔╩╖сцо╣мЁ" width="260" height="136" border="0"/>
+                <img src="/upload/pro/12017918115035.png" alt="Е╝╤Е╨╜Ф┬╥Г■╗ГЁ╩Г╩÷" width="260" height="136" border="0"/>
 
             </a></td>
         </tr>
         <tr>
-            <td height="50" align="center"><a href="big-e.html?pid=8">и╫╤╚╪цдо10KWp╪рм╔╩╖сцо╣мЁ</a></td>
+            <td height="50" align="center"><a href="big-e.html?pid=8">Е╠╠Д╦°Ф╣▌Е█≈10KWpЕ╝╤Е╨╜Ф┬╥Г■╗ГЁ╩Г╩÷</a></td>
         </tr>
     </table></td>
 </tr><tr>
@@ -197,12 +197,12 @@
         <tr>
             <td height="156" align="center" bgcolor="#FFFFFF" class="img"><a href="big-e.html?pid=9">
 
-                <img src="/upload/pro/12017918115048.png" alt="╪рм╔╩╖сцо╣мЁ" width="260" height="136" border="0"/>
+                <img src="/upload/pro/12017918115048.png" alt="Е╝╤Е╨╜Ф┬╥Г■╗ГЁ╩Г╩÷" width="260" height="136" border="0"/>
 
             </a></td>
         </tr>
         <tr>
-            <td height="50" align="center"><a href="big-e.html?pid=9">дом╗фТ╤╚7.84KWp╪рм╔╩╖сцо╣мЁ</a></td>
+            <td height="50" align="center"><a href="big-e.html?pid=9">Е█≈И─ Е░╞Д╦°7.84KWpЕ╝╤Е╨╜Ф┬╥Г■╗ГЁ╩Г╩÷</a></td>
         </tr>
     </table></td>
 
@@ -210,12 +210,12 @@
         <tr>
             <td height="156" align="center" bgcolor="#FFFFFF" class="img"><a href="big-e.html?pid=10">
 
-                <img src="/upload/pro/1201791811514.png" alt="╪рм╔╩╖сцо╣мЁ" width="260" height="136" border="0"/>
+                <img src="/upload/pro/1201791811514.png" alt="Е╝╤Е╨╜Ф┬╥Г■╗ГЁ╩Г╩÷" width="260" height="136" border="0"/>
 
             </a></td>
         </tr>
         <tr>
-            <td height="50" align="center"><a href="big-e.html?pid=10">╫╜кудо╬╘6.72KWp╪рм╔╩╖сцо╣мЁ</a></td>
+            <td height="50" align="center"><a href="big-e.html?pid=10">Ф╠÷Х▀▐Е█≈Д╨╛6.72KWpЕ╝╤Е╨╜Ф┬╥Г■╗ГЁ╩Г╩÷</a></td>
         </tr>
     </table></td>
 
@@ -223,12 +223,12 @@
         <tr>
             <td height="156" align="center" bgcolor="#FFFFFF" class="img"><a href="big-e.html?pid=11">
 
-                <img src="/upload/pro/12017918144639.png" alt="╪рм╔╩╖сцо╣мЁ" width="260" height="136" border="0"/>
+                <img src="/upload/pro/12017918144639.png" alt="Е╝╤Е╨╜Ф┬╥Г■╗ГЁ╩Г╩÷" width="260" height="136" border="0"/>
 
             </a></td>
         </tr>
         <tr>
-            <td height="50" align="center"><a href="big-e.html?pid=11">╟╡╩убМ╟╟и╫5KWp╪рм╔╩╖сцо╣мЁ</a></td>
+            <td height="50" align="center"><a href="big-e.html?pid=11">Е╝┴Е╬╫И╘╛И·█Е╠╠5KWpЕ╝╤Е╨╜Ф┬╥Г■╗ГЁ╩Г╩÷</a></td>
         </tr>
     </table></td>
 
@@ -236,12 +236,12 @@
         <tr>
             <td height="156" align="center" bgcolor="#FFFFFF" class="img"><a href="big-e.html?pid=12">
 
-                <img src="/upload/pro/12017918144655.png" alt="╪рм╔╩╖сцо╣мЁ" width="260" height="136" border="0"/>
+                <img src="/upload/pro/12017918144655.png" alt="Е╝╤Е╨╜Ф┬╥Г■╗ГЁ╩Г╩÷" width="260" height="136" border="0"/>
 
             </a></td>
         </tr>
         <tr>
-            <td height="50" align="center"><a href="big-e.html?pid=12">уЦ╫╜юЖк╝3.24KWp╪рм╔╩╖сцо╣мЁ</a></td>
+            <td height="50" align="center"><a href="big-e.html?pid=12">Ф╣≥Ф╠÷Д╦╫Ф╟╢3.24KWpЕ╝╤Е╨╜Ф┬╥Г■╗ГЁ╩Г╩÷</a></td>
         </tr>
     </table></td>
 
@@ -249,7 +249,7 @@
 </table>
 <table width="1200" border="0" align="center" cellpadding="0" cellspacing="0">
     <tr>
-        <td height="46" align="center">Total<font color="#FF0000">36</font>Products <font color="#FF0000">1/3</font>ё╨
+        <td height="46" align="center">Total<font color="#FF0000">36</font>Products <font color="#FF0000">1/3</font>О╪ 
 
             [&nbsp;<a href="cp-e.html?page=2&amp;cid=&sid=&amp;key=">Next</a>&nbsp;]&nbsp;&nbsp;[&nbsp;<a href="cp-e.html?page=3&amp;cid=&sid=&amp;key=">End</a>&nbsp;]
         </td>
