修改客户案例中的链接

--- a/pid3.html
+++ b/pid3.html
@@ -107,11 +107,11 @@
             <tr>
                 <td height="46" align="left"><font style="font-size:14px; line-height:26px;">
 
-                    上一个产品：<a href="big.html?pid=1" class="ss">江苏盐城6KWp家庭户用系统</a>
+                    上一个产品：<a href="pid2.html" class="ss">江苏盐城6KWp家庭户用系统</a>
 
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-                    下一个产品：<a href="big.html?pid=3" class="ss">淮安涟水3.24KWp家庭户用系统</a>
+                    下一个产品：<a href="pid4.html" class="ss">淮安涟水3.24KWp家庭户用系统</a>
 
                 </font></td>
                 <td align="right"><a href="javascript:history.back();">返回上一页</a></td>
