--- a/pid6.html
+++ b/pid6.html
@@ -107,11 +107,11 @@
             <tr>
                 <td height="46" align="left"><font style="font-size:14px; line-height:26px;">
 
-                    上一个产品：<a href="big.html?pid=21" class="ss">江苏南京350KWp光伏电站</a>
+                    上一个产品：<a href="pid5.html" class="ss">江苏南京350KWp光伏电站</a>
 
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-                    下一个产品：<a href="big.html?pid=23" class="ss">宜兴荆东机械180KWp光伏电站</a>
+                    下一个产品：<a href="pid7.html" class="ss">宜兴荆东机械180KWp光伏电站</a>
 
                 </font></td>
                 <td align="right"><a href="javascript:history.back();">返回上一页</a></td>
