--- a/pid7.html
+++ b/pid7.html
@@ -107,11 +107,11 @@
             <tr>
                 <td height="46" align="left"><font style="font-size:14px; line-height:26px;">
 
-                    上一个产品：<a href="big.html?pid=33" class="ss">江苏无锡15MW地面电站</a>
+                    上一个产品：<a href="pid6.html" class="ss">江苏无锡15MW地面电站</a>
 
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-                    下一个产品：<a href="big.html?pid=35" class="ss">河北承德20MWp地面电站</a>
+                    下一个产品：<a href="pid8.html" class="ss">河北承德20MWp地面电站</a>
 
                 </font></td>
                 <td align="right"><a href="javascript:history.back();">返回上一页</a></td>
