--- a/pid8.html
+++ b/pid8.html
@@ -107,7 +107,7 @@
             <tr>
                 <td height="46" align="left"><font style="font-size:14px; line-height:26px;">
 
-                    上一个产品：<a href="big.html?pid=35" class="ss">河北承德20MWp地面电站</a>
+                    上一个产品：<a href="pid7.html" class="ss">河北承德20MWp地面电站</a>
 
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     下一个产品：没有了
