--- a/pid1.html
+++ b/pid1.html
@@ -109,7 +109,7 @@
                     上一个产品：没有了
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-                    下一个产品：<a href="big.html?pid=2" class="ss">安徽淮南5.4KWp家庭户用系统</a>
+                    下一个产品：<a href="pid2.html" class="ss">安徽淮南5.4KWp家庭户用系统</a>
 
                 </font></td>
                 <td align="right"><a href="javascript:history.back();">返回上一页</a></td>
