--- a/pid5.html
+++ b/pid5.html
@@ -107,11 +107,11 @@
             <tr>
                 <td height="46" align="left"><font style="font-size:14px; line-height:26px;">
 
-                    上一个产品：<a href="big.html?pid=20" class="ss">安徽池州3.24KWp家庭户用系统</a>
+                    上一个产品：<a href="pid4.html" class="ss">安徽池州3.24KWp家庭户用系统</a>
 
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-                    下一个产品：<a href="big.html?pid=22" class="ss">宜兴裕华纺织240KWp光伏电站</a>
+                    下一个产品：<a href="pid6.html" class="ss">宜兴裕华纺织240KWp光伏电站</a>
 
                 </font></td>
                 <td align="right"><a href="javascript:history.back();">返回上一页</a></td>
