修改关于页面的内容

--- a/pid1.html
+++ b/pid1.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <HEAD>
-    <title>江苏盐城6KWp家庭户用系统_分布式光伏电站,分布式光伏发电,屋顶分布式并网电站 - 浙江仁智能源科技有限公司</title>
+    <title>江苏盐城6KWp家庭户用系统_分布式光伏电站,分布式光伏发电,屋顶分布式并网电站 - 无锡市仁智新能源科技有限公司</title>
     <meta name="keywords" content="分布式光伏电站,分布式光伏发电,屋顶分布式并网电站,仁智能源" />
     <meta name="description" content="仁智能源是苏州科之佳电力有限公司下属子公司，集团公司成立于2008年，总部位于无锡市，业务涉及海内外，包括：太阳能、风能、国际贸易、金融投资、建筑设计与施工、绿色新能源开发等业务，并且是中国著名的光伏制造企业之一" />
     <link rel="stylesheet" href="js/lrtk.css">
@@ -18,7 +18,7 @@
     <tr>
         <td height="32" align="center" bgcolor="#E8E8E8"><table width="1200" border="0" cellspacing="0" cellpadding="0">
             <tr>
-                <td align="left">欢迎进入浙江仁智能源科技有限公司【官网】</td>
+                <td align="left">欢迎进入无锡市仁智新能源科技有限公司【官网】</td>
                 <td align="right"><a href="sitemap.xml" target="_blank">网站地图</a> | <a href="javascript:void(0)" onClick="shoucang(document.title,window.location)">收藏本站</a></td>
             </tr>
         </table></td>
@@ -150,7 +150,7 @@
             <tr>
                 <td align="center"><font style="font-size:14px; color:#fff; line-height:32px;">咨询热线：15088204168（陈先生）&nbsp;&nbsp;，&nbsp;&nbsp;13385894163（胡先生）<br />
                     地 址：浙江省金华市金西开发区芙蓉路39号&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;邮 箱：admin@zjrenzhi.com<br />
-                    Copyright &#169;  浙江仁智能源科技有限公司&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;技术支持：<a href="http://www.0579yk.com/" target="_blank" class="end">跨海网络</a></font></td>
+                    Copyright &#169;  无锡市仁智新能源科技有限公司&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;技术支持：<a href="http://www.0579yk.com/" target="_blank" class="end">跨海网络</a></font></td>
             </tr>
         </table></td>
     </tr>
