--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>关于我们-分布式光伏电站,分布式光伏发电,屋顶分布式并网电站 - 浙江仁智能源科技有限公司</title>
+    <title>关于我们-分布式光伏电站,分布式光伏发电,屋顶分布式并网电站 - 无锡市仁智新能源科技有限公司</title>
     <meta name="keywords" content="分布式光伏电站,分布式光伏发电,屋顶分布式并网电站,仁智能源" />
     <meta name="description" content="仁智能源是苏州科之佳电力有限公司下属子公司，集团公司成立于2008年，总部位于无锡市，业务涉及海内外，包括：太阳能、风能、国际贸易、金融投资、建筑设计与施工、绿色新能源开发等业务，并且是中国著名的光伏制造企业之一" />
     <link rel="stylesheet" href="js/lrtk.css">
@@ -12,6 +12,21 @@
 
     <script src="images/add.js" type="text/javascript"></script>
     <link rel="stylesheet" href="images/css.css">
+    <script type="text/javascript">
+        (function (doc, win) {
+            var docEl = doc.documentElement,
+                resizeEvt = 'orientationchange' in window ? 'orientationchange' : 'resize',
+                recalc = function () {
+                    var clientWidth = docEl.clientWidth;
+                    if (!clientWidth) return;
+                    docEl.style.fontSize = 20 * (clientWidth / 320) + 'px';//其中“20”根据你设置的html的font-size属性值做适当的变化
+                };
+
+            if (!doc.addEventListener) return;
+            win.addEventListener(resizeEvt, recalc, false);
+            doc.addEventListener('DOMContentLoaded', recalc, false);
+        })(document, window);
+    </script>
 </head>
 
 <body>
@@ -19,7 +34,7 @@
     <tr>
         <td height="32" align="center" bgcolor="#E8E8E8"><table width="1200" border="0" cellspacing="0" cellpadding="0">
             <tr>
-                <td align="left">欢迎进入浙江仁智能源科技有限公司【官网】</td>
+                <td align="left">欢迎进入无锡市仁智新能源科技有限公司【官网】</td>
                 <td align="right"><a href="sitemap.xml" target="_blank">网站地图</a> | <a href="javascript:void(0)" onClick="shoucang(document.title,window.location)">收藏本站</a></td>
             </tr>
         </table></td>
@@ -85,9 +100,10 @@
 </table>
 <table width="1200" border="0" align="center" cellpadding="0" cellspacing="0">
     <tr>
-        <td style="line-height:32px;"><div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;浙江仁智能源科技有限公司，注册成立于2011年，地处金华金西国家开发园区芙蓉路39号，公司投入资金6000万元，建设现代化的生产车间15800平方和采购了最新生产设备，组件生产达460兆瓦的生产能力，生产总值达6亿元人民币。仁智能源是苏州科之佳电力有限公司下属子公司，集团公司成立于2008年，总部位于无锡市，业务涉及海内外，包括：太阳能、风能、国际贸易、金融投资、建筑设计与施工、绿色新能源开发等业务，并且是中国著名的光伏制造企业之一。</div>
-            <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;公司机构设施完善，生产、安装、服务技术力量雄厚，凭借全球先进的研发能力为企业技术进步、技术延伸和可持续发展提供了有力保障。现已通过ISO9001:2000质量管理体系认证及国际CE、IEC61215、TUV及UL证书。</div>
-            <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;如今，浙江仁智能源科技有限公司在集团下属公司安徽三三电力建筑安装公司、安徽省嘉睦太阳能科技有限公司、苏州嘉欣新能源科技有限公司、无锡洁阳光电有限公司积极配合下，现已在全国各地开展光伏电站建设，为您提供最优质的产品，最好的服务，最值得信赖的光伏事业伙伴。</div></td>
+        <td style="line-height:32px;"><div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;无锡市仁智新能源科技有限公司，位于无锡市新吴区新辉环路19号，是从事太阳能组件的生产、销售、安装于一体的企业。公司拥有一支凝聚力高，战斗力强，多年从事太阳能生产、研发的工程技术团队。对电站的设计与安装团队更是举足轻重。我们坚信以优质的产品、优良的服务，让每一位客户用的满意，用的放心。秉承“品质至上，用户至上”的理念，用一流的品质，一流的服务，打造超一流的企业。</div>
+            <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;我们是太阳的使者，把太阳能送给整个人类，送进每家每户。</div>
+            <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;我们是光伏的制造者，把我们的设备送给所有需要太阳能源的人们。</div>
+            <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;我们是使用光能的服务者，为每一位需要光能的人们安装最优质的电站。</div></td>
     </tr>
     <tr>
         <td>&nbsp;</td>
@@ -126,7 +142,7 @@
             <tr>
                 <td align="center"><font style="font-size:14px; color:#fff; line-height:32px;">咨询热线：15088204168（陈先生）&nbsp;&nbsp;，&nbsp;&nbsp;13385894163（胡先生）<br />
                     地 址：浙江省金华市金西开发区芙蓉路39号&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;邮 箱：admin@zjrenzhi.com<br />
-                    Copyright &#169;  浙江仁智能源科技有限公司&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;技术支持：<a href="http://www.0579yk.com/" target="_blank" class="end">跨海网络</a></font></td>
+                    Copyright &#169;  无锡市仁智新能源科技有限公司&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;技术支持：<a href="http://www.0579yk.com/" target="_blank" class="end">跨海网络</a></font></td>
             </tr>
         </table></td>
     </tr>
