--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>分布式光伏电站,分布式光伏发电,屋顶分布式并网电站 - 浙江仁智能源科技有限公司</title>
+<title>分布式光伏电站,分布式光伏发电,屋顶分布式并网电站 - 无锡市仁智新能源科技有限公司</title>
 <meta name="keywords" content="分布式光伏电站,分布式光伏发电,屋顶分布式并网电站,仁智能源" />
 <meta name="description" content="仁智能源是苏州科之佳电力有限公司下属子公司，集团公司成立于2008年，总部位于无锡市，业务涉及海内外，包括：太阳能、风能、国际贸易、金融投资、建筑设计与施工、绿色新能源开发等业务，并且是中国著名的光伏制造企业之一" />
 <link rel="stylesheet" href="js/lrtk.css">
@@ -11,7 +11,22 @@
 <script src="images/add.js" type="text/javascript"></script>
 <link rel="stylesheet" href="images/css.css">
 <script src="kf/tiaozhuan.js" type="text/javascript"></script>
-<script type="text/javascript">uaredirect("http://www.zjrenzhi.com/m","http://www.zjrenzhi.com");</script>
+<script type="text/javascript">uaredirect("http://www.wxrzxny.com/m","http://www.wxrzxny.com");</script>
+  <script type="text/javascript">
+      (function (doc, win) {
+          var docEl = doc.documentElement,
+              resizeEvt = 'orientationchange' in window ? 'orientationchange' : 'resize',
+              recalc = function () {
+                  var clientWidth = docEl.clientWidth;
+                  if (!clientWidth) return;
+                  docEl.style.fontSize = 20 * (clientWidth / 320) + 'px';//其中“20”根据你设置的html的font-size属性值做适当的变化
+              };
+
+          if (!doc.addEventListener) return;
+          win.addEventListener(resizeEvt, recalc, false);
+          doc.addEventListener('DOMContentLoaded', recalc, false);
+      })(document, window);
+  </script>
 </head>
 
 
@@ -20,7 +35,7 @@
   <tr>
     <td height="32" align="center" bgcolor="#E8E8E8"><table width="1200" border="0" cellspacing="0" cellpadding="0">
         <tr>
-          <td align="left">欢迎进入浙江仁智能源科技有限公司【官网】</td>
+          <td align="left">欢迎进入无锡市仁智新能源科技有限公司【官网】</td>
           <td align="right"><a href="sitemap.xml" target="_blank">网站地图</a> | <a href="javascript:void(0)" onClick="shoucang(document.title,window.location)">收藏本站</a></td>
         </tr>
     </table></td>
@@ -77,7 +92,7 @@
     <td height="80" align="center" class="line_news"><font style="font-size:30px; color:#ef8305;">一站式服务</font></td>
   </tr>
   <tr>
-    <td height="56" align="center" class="line_news" style="font-size:18px; color:#a8a8a8; line-height:30px;">浙江仁智能源科技有限公司<br />
+    <td height="56" align="center" class="line_news" style="font-size:18px; color:#a8a8a8; line-height:30px;">无锡市仁智新能源科技有限公司<br />
     <img src="images/a_about_line.png" width="55" height="13" /></td>
   </tr>
   <tr>
@@ -133,7 +148,7 @@
     <td height="80" align="center" class="line_news"><font style="font-size:30px; color:#ef8305;">应用类型</font></td>
   </tr>
   <tr>
-    <td height="56" align="center" class="line_news" style="font-size:18px; color:#a8a8a8; line-height:30px;">浙江仁智能源科技有限公司<br />
+    <td height="56" align="center" class="line_news" style="font-size:18px; color:#a8a8a8; line-height:30px;">无锡市仁智新能源科技有限公司<br />
         <img src="images/a_about_line.png" width="55" height="13" /></td>
   </tr>
   <tr>
@@ -243,10 +258,10 @@
           </tr>
           
 		  <tr>
-            <td height="46" align="left"><a href="newsbig.html?nid=1.html"><font style="font-size:16px; color:#000;">热烈祝贺浙江仁智能源科技有限公司网站全新上线！</font></a></td>
+            <td height="46" align="left"><a href="newsbig.html?nid=1.html"><font style="font-size:16px; color:#000;">热烈祝贺无锡市仁智新能源科技有限公司网站全新上线！</font></a></td>
           </tr>
           <tr>
-            <td align="left"><font style="font-size:14px; line-height:24px; color:#333;"><div>浙江仁智能源科技有限公司，注册成立于2011年，地处金华金西国家开发园区芙蓉路39号，公司投入资金6000万元，建设现代化的生产车间15800平方和采购了最新生产设备，组件生产达460兆瓦的生产能力，生产总值达6亿元人民币。仁智能源是苏州科之佳电力有限公司下属子公司，集团公司成立于2008年，总部位于无锡市，业务涉及海内外，包括：太阳能、风能、国际贸易、金融投资、建筑设计与施工、绿色新能源开发等业务，并且是...</font></td>
+            <td align="left"><font style="font-size:14px; line-height:24px; color:#333;"><div>无锡市仁智新能源科技有限公司，注册成立于2011年，地处金华金西国家开发园区芙蓉路39号，公司投入资金6000万元，建设现代化的生产车间15800平方和采购了最新生产设备，组件生产达460兆瓦的生产能力，生产总值达6亿元人民币。仁智能源是苏州科之佳电力有限公司下属子公司，集团公司成立于2008年，总部位于无锡市，业务涉及海内外，包括：太阳能、风能、国际贸易、金融投资、建筑设计与施工、绿色新能源开发等业务，并且是...</font></td>
           </tr>
           <tr>
             <td height="36" align="left"><font style="font-size:14px; color:#333;">2017-09-18</font></td>
@@ -256,7 +271,7 @@
           <table width="600" border="0" cellspacing="0" cellpadding="0">
             
 			<tr>
-              <td width="450" height="36" align="left" class="line_news"><a href="newsbig.html?nid=1.html"><font style="font-size:14px; color:#000;">&raquo; 热烈祝贺浙江仁智能源科技有限公司网站全新上线！</font></a></td>
+              <td width="450" height="36" align="left" class="line_news"><a href="newsbig.html?nid=1.html"><font style="font-size:14px; color:#000;">&raquo; 热烈祝贺无锡市仁智新能源科技有限公司网站全新上线！</font></a></td>
               <td width="90" height="38" align="center" class="line_news"><font style="font-size:14px; color:#000;">2017-09-18</font></td>
             </tr>
 			
@@ -479,7 +494,7 @@
       <tr>
         <td align="center"><font style="font-size:14px; color:#fff; line-height:32px;">咨询热线：15088204168（陈先生）&nbsp;&nbsp;，&nbsp;&nbsp;13385894163（胡先生）<br />
           地 址：浙江省金华市金西开发区芙蓉路39号&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;邮 箱：admin@zjrenzhi.com<br />
-          Copyright &#169;  浙江仁智能源科技有限公司&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;技术支持：<a href="http://www.0579yk.com/" target="_blank" class="end">跨海网络</a></font></td>
+          Copyright &#169;  无锡市仁智新能源科技有限公司&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;技术支持：<a href="http://www.0579yk.com/" target="_blank" class="end">跨海网络</a></font></td>
       </tr>
     </table></td>
   </tr>
