--- a/newsbig1.html
+++ b/newsbig1.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <HEAD>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>安徽淮南5.4KWp家庭户用系统_分布式光伏电站,分布式光伏发电,屋顶分布式并网电站 - 无锡市仁智新能源科技有限公司</title>
+    <title>如果系统设备出现问题，我该如何操作？_分布式光伏电站,分布式光伏发电,屋顶分布式并网电站 - 无锡市仁智新能源科技有限公司</title>
     <meta name="keywords" content="分布式光伏电站,分布式光伏发电,屋顶分布式并网电站,仁智能源" />
     <meta name="description" content="仁智能源是苏州科之佳电力有限公司下属子公司，集团公司成立于2008年，总部位于无锡市，业务涉及海内外，包括：太阳能、风能、国际贸易、金融投资、建筑设计与施工、绿色新能源开发等业务，并且是中国著名的光伏制造企业之一" />
     <link rel="stylesheet" href="js/lrtk.css">
@@ -39,10 +39,10 @@
                         <td width="150" align="center"><a href="fd.html"><font style="font-size:6px; font-family:Constantia; color:#A7A7A7;">Photovoltaic</font><br />
                             分布式光伏发电</a></td>
                         <td style="text-align:center;">/</td>
-                        <td align="center"><a href="news.html"><font style="font-size:6px; font-family:Constantia; color:#A7A7A7;">News</font><br />
+                        <td align="center"><a href="news.html" class="dh"><font style="font-size:6px; font-family:Constantia; color:#A7A7A7;">News</font><br />
                             新闻中心</a></td>
                         <td style="text-align:center;">/</td>
-                        <td align="center"><a href="cp.html" class="dh"><font style="font-size:6px; font-family:Constantia; color:#A7A7A7;">Case</font><br />
+                        <td align="center"><a href="cp.html"><font style="font-size:6px; font-family:Constantia; color:#A7A7A7;">Case</font><br />
                             案例展示</a></td>
                         <td style="text-align:center;">/</td>
                         <td align="center"><a href="cs.html"><font style="font-size:6px; font-family:Constantia; color:#A7A7A7;">Contacts</font><br />
@@ -70,54 +70,48 @@
 </table>
 <table width="1256" height="60" border="0" align="center" cellpadding="0" cellspacing="0">
     <tr>
-        <td>您的位置 <font color="#FF0000">&gt;&gt;</font> 首 页 <font color="#FF0000">&gt;&gt;</font> 家庭户用项目 <font color="#FF0000">&gt;&gt;</font> 安徽淮南5.4KWp家庭户用系统</td>
+        <td>您的位置 <font color="#FF0000">&gt;&gt;</font> 首 页 <font color="#FF0000">&gt;&gt;</font> 新闻中心</td>
     </tr>
 </table>
-<table width="1200" border="0" align="center" cellpadding="0" cellspacing="0">
+<table width="1200" height="30" border="0" align="center" cellpadding="0" cellspacing="0">
     <tr>
         <td>&nbsp;</td>
     </tr>
 </table>
-<table width="1200" border="0" align="center" cellpadding="15" cellspacing="0">
-    <tr>
-        <td width="460" align="center" class="img">
-            <img src="/upload/pro/12017918113752.png" />
-        </td>
-        <td width="2" align="left" valign="top">&nbsp;</td>
-        <td width="648" align="left" valign="top" style="line-height:36px;">家庭户用系统<br />
-            安徽淮南5.4KWp家庭户用系统<br />
-            分享到：
-            <div class="bdsharebuttonbox" style="width:140px;"><a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a></a><a href="#" class="bds_qzone" data-cmd="qzone" title="分享到QQ空间"></a><a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_tqq" data-cmd="tqq" title="分享到腾讯微博"></a><a href="#" class="bds_renren" data-cmd="renren" title="分享到人人网"></a><a href="#" class="bds_more" data-cmd="more"></div>
-            <script>window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdPic":"","bdStyle":"0","bdSize":"16"},"share":{}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script></td>
-    </tr>
-</table>
 <table width="1200" border="0" align="center" cellpadding="0" cellspacing="0">
     <tr>
-        <td>&nbsp;</td>
+        <td height="42" align="center" valign="top"><font style="font-size:18px;">如果系统设备出现问题，我该如何操作？</font></td>
     </tr>
     <tr>
-        <td height="50" class="line_news"><font style="font-size:24px;">案例详情</font></td>
+        <td height="1" bgcolor="#BCC7D6"></td>
     </tr>
     <tr>
-        <td height="80" valign="top" class="line_news"><font style="font-size:14px; line-height:26px; text-align:center;"></font></td>
-    </tr>
-</table>
-<table width="1200" border="0" align="center" cellpadding="0" cellspacing="0">
-    <tr>
-        <td align="center" class="line_news"><table width="100%" border="0" cellspacing="0" cellpadding="0">
+        <td align="left"><table width="100%" border="0" cellspacing="0" cellpadding="0">
             <tr>
-                <td height="46" align="left"><font style="font-size:14px; line-height:26px;">
-
-                    上一个产品：<a href="pid2.html" class="ss">江苏盐城6KWp家庭户用系统</a>
-
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-
-                    下一个产品：<a href="pid4.html" class="ss">淮安涟水3.24KWp家庭户用系统</a>
-
-                </font></td>
-                <td align="right"><a href="javascript:history.back();">返回上一页</a></td>
+                <td width="850" height="36"><img src="images/i_add.png" /> <a href="javascript:void(0)" onclick="shoucang(document.title,window.location)">加入收藏</a>&nbsp;&nbsp;<img src="images/i_pri.png" /> <a  class="topicLink" href="javascript:window.print();">打印文章</a>&nbsp;&nbsp;<img src="images/i_date.png" /> 发布日期：2017-09-18</td>
+                <td width="210" align="right">分享到：</td>
+                <td width="140" align="right"><div class="bdsharebuttonbox" style="width:140px;"><a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a><a href="#" class="bds_qzone" data-cmd="qzone" title="分享到QQ空间"></a><a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_tqq" data-cmd="tqq" title="分享到腾讯微博"></a><a href="#" class="bds_renren" data-cmd="renren" title="分享到人人网"></a></div>
+                    <a href="#" class="bds_more" data-cmd="more">
+                        <script>window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdPic":"","bdStyle":"0","bdSize":"16"},"share":{}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
+                    </a></td>
             </tr>
         </table></td>
+    </tr>
+    <tr>
+        <td height="1" bgcolor="#BCC7D6"></td>
+    </tr>
+    <tr>
+        <td>&nbsp;</td>
+    </tr>
+
+    <tr>
+        <td align="left"><font style="font-size:14px; line-height:26px;">我们光伏系统自带保护设备，实时监控平台会第一时间发现系统异常，你不需要进行任何操作，我们服务团队第一时间拨打您的电话，您只需要配合服务就好</font></td>
+    </tr>
+    <tr>
+        <td colspan="2" align="left" class="dh_b3">&nbsp;</td>
+    </tr>
+    <tr>
+        <td height="42" colspan="2" align="left"><a href="javascript:history.back();" class="ss">返回上一页</a></td>
     </tr>
 </table>
 
@@ -152,7 +146,7 @@
         <td height="160" align="center" bgcolor="#37394A"><table width="1200" border="0" cellspacing="0" cellpadding="0">
             <tr>
                 <td align="center"><font style="font-size:14px; color:#fff; line-height:32px;">咨询热线：15088204168（陈先生）&nbsp;&nbsp;，&nbsp;&nbsp; <br />
-                    地 址：江苏省无锡市新吴区新辉环路19号&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;邮 箱：admin@zjrenzhi.com<br />
+                    地 址：浙江省金华市金西开发区芙蓉路39号&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;邮 箱：admin@zjrenzhi.com<br />
                     Copyright &#169;  无锡市仁智新能源科技有限公司&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;技术支持：<a href="http://www.0579yk.com/" target="_blank" class="end">跨海网络</a></font></td>
             </tr>
         </table></td>
