--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@
 </table>
 <table width="1200" border="0" align="center" cellpadding="0" cellspacing="0">
     <tr>
-        <td style="line-height:32px;"><div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;无锡市仁智新能源科技有限公司，位于无锡市新吴区新辉环路19号，是从事太阳能组件的生产、销售、安装于一体的企业。公司拥有一支凝聚力高，战斗力强，多年从事太阳能生产、研发的工程技术团队。对电站的设计与安装团队更是举足轻重。我们坚信以优质的产品、优良的服务，让每一位客户用的满意，用的放心。秉承“品质至上，用户至上”的理念，用一流的品质，一流的服务，打造超一流的企业。</div>
+        <td style="line-height:32px;"><div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;无锡市仁智新能源科技有限公司，位于江苏省无锡市新吴区新辉环路19号，是从事太阳能组件的生产、销售、安装于一体的企业。公司拥有一支凝聚力高，战斗力强，多年从事太阳能生产、研发的工程技术团队。对电站的设计与安装团队更是举足轻重。我们坚信以优质的产品、优良的服务，让每一位客户用的满意，用的放心。秉承“品质至上，用户至上”的理念，用一流的品质，一流的服务，打造超一流的企业。</div>
             <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;我们是太阳的使者，把太阳能送给整个人类，送进每家每户。</div>
             <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;我们是光伏的制造者，把我们的设备送给所有需要太阳能源的人们。</div>
             <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;我们是使用光能的服务者，为每一位需要光能的人们安装最优质的电站。</div></td>
@@ -140,8 +140,8 @@
     <tr>
         <td height="160" align="center" bgcolor="#37394A"><table width="1200" border="0" cellspacing="0" cellpadding="0">
             <tr>
-                <td align="center"><font style="font-size:14px; color:#fff; line-height:32px;">咨询热线：15088204168（陈先生）&nbsp;&nbsp;，&nbsp;&nbsp;13385894163（胡先生）<br />
-                    地 址：浙江省金华市金西开发区芙蓉路39号&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;邮 箱：admin@zjrenzhi.com<br />
+                <td align="center"><font style="font-size:14px; color:#fff; line-height:32px;">咨询热线：15088204168（陈先生）&nbsp;&nbsp;，&nbsp;&nbsp; <br />
+                    地 址：江苏省无锡市新吴区新辉环路19号&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;邮 箱：admin@zjrenzhi.com<br />
                     Copyright &#169;  无锡市仁智新能源科技有限公司&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;技术支持：<a href="http://www.0579yk.com/" target="_blank" class="end">跨海网络</a></font></td>
             </tr>
         </table></td>
