--- a/cp.html
+++ b/cp.html
@@ -303,8 +303,8 @@
     <tr>
         <td height="160" align="center" bgcolor="#37394A"><table width="1200" border="0" cellspacing="0" cellpadding="0">
             <tr>
-                <td align="center"><font style="font-size:14px; color:#fff; line-height:32px;">咨询热线：15088204168（陈先生）&nbsp;&nbsp;，&nbsp;&nbsp;13385894163（胡先生）<br />
-                    地 址：浙江省金华市金西开发区芙蓉路39号&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;邮 箱：admin@zjrenzhi.com<br />
+                <td align="center"><font style="font-size:14px; color:#fff; line-height:32px;">咨询热线：15088204168（陈先生）&nbsp;&nbsp;，&nbsp;&nbsp; <br />
+                    地 址：江苏省无锡市新吴区新辉环路19号&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;邮 箱：admin@zjrenzhi.com<br />
                     Copyright &#169;  无锡市仁智新能源科技有限公司&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;技术支持：<a href="http://www.0579yk.com/" target="_blank" class="end">跨海网络</a></font></td>
             </tr>
         </table></td>
