--- a/news.html
+++ b/news.html
@@ -79,23 +79,23 @@
 <table width="1200" border="0" align="center" cellpadding="0" cellspacing="0">
 
     <tr>
-        <td width="791" height="42" align="left" class="line_news"><font style="font-size:14px; color:#FF0000;">&raquo;</font>&nbsp;&nbsp;<a href="newsbig.html?nid=5" style="font-size:14px;">如果系统设备出现问题，我该如何操作？</a></td>
+        <td width="791" height="42" align="left" class="line_news"><font style="font-size:14px; color:#FF0000;">&raquo;</font>&nbsp;&nbsp;<a href="newsbig1.html" style="font-size:14px;">如果系统设备出现问题，我该如何操作？</a></td>
         <td width="92" align="right" class="line_news"><font style="font-size:14px;">2017-09-18</font></td>
 
     <tr>
-        <td width="791" height="42" align="left" class="line_news"><font style="font-size:14px; color:#FF0000;">&raquo;</font>&nbsp;&nbsp;<a href="newsbig.html?nid=4" style="font-size:14px;">如何确保屋顶光伏系统能可靠运营20年？</a></td>
+        <td width="791" height="42" align="left" class="line_news"><font style="font-size:14px; color:#FF0000;">&raquo;</font>&nbsp;&nbsp;<a href="newsbig2.html" style="font-size:14px;">如何确保屋顶光伏系统能可靠运营20年？</a></td>
         <td width="92" align="right" class="line_news"><font style="font-size:14px;">2017-09-18</font></td>
 
     <tr>
-        <td width="791" height="42" align="left" class="line_news"><font style="font-size:14px; color:#FF0000;">&raquo;</font>&nbsp;&nbsp;<a href="newsbig.html?nid=3" style="font-size:14px;">我想安装屋顶光伏系统，你们是如何操作的？</a></td>
+        <td width="791" height="42" align="left" class="line_news"><font style="font-size:14px; color:#FF0000;">&raquo;</font>&nbsp;&nbsp;<a href="newsbig3.html" style="font-size:14px;">我想安装屋顶光伏系统，你们是如何操作的？</a></td>
         <td width="92" align="right" class="line_news"><font style="font-size:14px;">2017-09-18</font></td>
 
     <tr>
-        <td width="791" height="42" align="left" class="line_news"><font style="font-size:14px; color:#FF0000;">&raquo;</font>&nbsp;&nbsp;<a href="newsbig.html?nid=2" style="font-size:14px;">分布式电站的申报流程？</a></td>
+        <td width="791" height="42" align="left" class="line_news"><font style="font-size:14px; color:#FF0000;">&raquo;</font>&nbsp;&nbsp;<a href="newsbig4.html" style="font-size:14px;">分布式电站的申报流程？</a></td>
         <td width="92" align="right" class="line_news"><font style="font-size:14px;">2017-09-18</font></td>
 
     <tr>
-        <td width="791" height="42" align="left" class="line_news"><font style="font-size:14px; color:#FF0000;">&raquo;</font>&nbsp;&nbsp;<a href="newsbig.html?nid=1" style="font-size:14px;">热烈祝贺无锡市仁智新能源科技有限公司网站全新上线！</a></td>
+        <td width="791" height="42" align="left" class="line_news"><font style="font-size:14px; color:#FF0000;">&raquo;</font>&nbsp;&nbsp;<a href="newsbig5.html" style="font-size:14px;">热烈祝贺无锡市仁智新能源科技有限公司网站全新上线！</a></td>
         <td width="92" align="right" class="line_news"><font style="font-size:14px;">2017-09-18</font></td>
 
     <tr>
@@ -134,8 +134,8 @@
     <tr>
         <td height="160" align="center" bgcolor="#37394A"><table width="1200" border="0" cellspacing="0" cellpadding="0">
             <tr>
-                <td align="center"><font style="font-size:14px; color:#fff; line-height:32px;">咨询热线：15088204168（陈先生）&nbsp;&nbsp;，&nbsp;&nbsp;13385894163（胡先生）<br />
-                    地 址：浙江省金华市金西开发区芙蓉路39号&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;邮 箱：admin@zjrenzhi.com<br />
+                <td align="center"><font style="font-size:14px; color:#fff; line-height:32px;">咨询热线：15088204168（陈先生）&nbsp;&nbsp;，&nbsp;&nbsp; <br />
+                    地 址：江苏省无锡市新吴区新辉环路19号&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;邮 箱：admin@zjrenzhi.com<br />
                     Copyright &#169;  无锡市仁智新能源科技有限公司&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;技术支持：<a href="http://www.0579yk.com/" target="_blank" class="end">跨海网络</a></font></td>
             </tr>
         </table></td>
