--- a/index.html
+++ b/index.html
@@ -110,11 +110,7 @@
       <tr>
         <td align="center" valign="top" style="line-height:24px;"><font style="font-size:18px; line-height:38px;">项目咨询</font><br />
           15088204168（陈先生）<br />
-<<<<<<< HEAD
           邮 箱：rzxny@wxrzxny.com</td>
-=======
-          邮 箱：admin@wxrzxny.com</td>
->>>>>>> b13a24ed602b7e7b4414114987bab48a35da9e7c
       </tr>
     </table></td>
     <td align="center"><table width="100" border="0" cellspacing="0" cellpadding="0">
@@ -498,13 +494,8 @@
   <tr>
     <td height="160" align="center" bgcolor="#37394A"><table width="1200" border="0" cellspacing="0" cellpadding="0">
       <tr>
-<<<<<<< HEAD
-        <td align="center"><font style="font-size:14px; color:#fff; line-height:32px;">咨询热线：15088204168（陈先生）&nbsp;&nbsp;<br />
-          地 址：浙江省金华市金西开发区芙蓉路39号&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;邮 箱：rzxny@wxrzxny.com<br />
-=======
         <td align="center"><font style="font-size:14px; color:#fff; line-height:32px;">咨询热线：15088204168（陈先生）<br />
-          地 址：江苏省无锡市新吴区新辉环路19号&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;邮 箱：admin@wxrzxny.com<br />
->>>>>>> b13a24ed602b7e7b4414114987bab48a35da9e7c
+          地 址：江苏省无锡市新吴区新辉环路19号&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;邮 箱：rzxny@wxrzxny.com<br />
           Copyright &#169;  无锡市仁智新能源科技有限公司&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;技术支持：<a href="http://www.0579yk.com/" target="_blank" class="end">跨海网络</a></font></td>
       </tr>
     </table></td>
