--- a/fd.html
+++ b/fd.html
@@ -110,8 +110,6 @@
                 <td align="center"><a href="news.html?cid=1" class="end">新闻中心</a></td>
                 <td align="center" style="color:#FFFFFF;">|</td>
                 <td align="center"><a href="news.html?cid=2" class="end">客户问答</a></td>
-                <td align="center" style="color:#FFFFFF;">|</td>
-                <td align="center"><a href="cs.html" class="end">联系我们</a></td>
             </tr>
         </table></td>
     </tr>
@@ -121,8 +119,8 @@
     <tr>
         <td height="160" align="center" bgcolor="#37394A"><table width="1200" border="0" cellspacing="0" cellpadding="0">
             <tr>
-                <td align="center"><font style="font-size:14px; color:#fff; line-height:32px;">咨询热线：15088204168（陈先生）&nbsp;&nbsp;，&nbsp;&nbsp; <br />
-                    地 址：江苏省无锡市新吴区新辉环路19号&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;邮 箱：admin@zjrenzhi.com<br />
+                <td align="center"><font style="font-size:14px; color:#fff; line-height:32px;">咨询热线：13706168569 李先生&nbsp;&nbsp;，&nbsp;&nbsp; <br />
+                    地 址：江苏省无锡市新吴区新辉环路19号&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;邮 箱：rzxny@wxrzxny.com<br />
                     Copyright &#169;  无锡市仁智新能源科技有限公司&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;技术支持：<a href="http://www.0579yk.com/" target="_blank" class="end">跨海网络</a></font></td>
             </tr>
         </table></td>
